# surfpool

./: .dockerignore  .gitignore  .mcp.json  Cargo.toml  Dockerfile  Makefile
.github/workflows/: release_crates.yaml  release_image.yml
crates/cli/: Cargo.toml
crates/cli/src/cli/: mod.rs
crates/cli/src/cli/simnet/: mod.rs
crates/cli/src/cli/update/: mod.rs
crates/cli/src/scaffold/: anchor.rs  utils.rs
crates/cli/src/types/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  types.rs
crates/core/src/rpc/: accounts_data.rs  accounts_scan.rs  full.rs  jito.rs  minimal.rs  mod.rs  surfnet_cheatcodes.rs  utils.rs  ws.rs
crates/core/src/runloops/: mod.rs
crates/core/src/storage/: mod.rs
crates/core/src/surfnet/: locker.rs  mod.rs  surfnet_lite_svm.rs  svm.rs
crates/core/src/tests/: integration.rs
crates/core/src/tests/assets/: program_snapshot.json
crates/jupiter/: Cargo.toml
crates/jupiter/src/: client.rs  config.rs  error.rs  http.rs  lib.rs  refresh.rs  rpc.rs  types.rs
crates/sdk-node/: package-lock.json  package.json
crates/sdk-node/scripts/: prepare-release.js  smoke.js
crates/sdk-node/src/: lib.rs
crates/sdk/src/: lib.rs  surfnet.rs
crates/types/: Cargo.toml
crates/types/src/: features.rs  types.rs
docker/: .env.example  Caddyfile  README.md  docker-stack.yaml  entrypoint.sh
plans/: 2026-05-26-slots-updates-subscribe-rpc-v1.md
setup/: Caddyfile  cheatsheet.md  docker-stack.yml
